# daqdataformats

./: .gitattributes  CMakeLists.txt  README.md
cmake/: cdfConfig.cmake.in  daq-rawdataConfig.cmake.in  daqdataformatsConfig.cmake.in  dataformatsConfig.cmake.in
docs/: ComponentRequestV0.md  ComponentRequestV1.md  ComponentRequestV2.md  DataFormatNotes.md  FragmentHeaderV1.md  FragmentHeaderV2.md  FragmentHeaderV3.md  FragmentHeaderV4.md  GeoIDV0.md  GeoIDV1.md  Home.md  README.md  SourceIDV2.md  TriggerRecordHeaderDataV1.md  TriggerRecordHeaderDataV2.md  TriggerRecordHeaderDataV3.md  dune_common_data_formats.dia
include/cdf/: ComponentRequest.hpp  Fragment.hpp  FragmentHeader.hpp  GeoID.hpp  TriggerRecord.hpp  TriggerRecordHeader.hpp  Types.hpp
include/daq-rawdata/wib/: WIBFrame.hpp
include/daqdataformats/: ComponentRequest.hpp  Fragment.hpp  FragmentHeader.hpp  GeoID.hpp  SourceID.hpp  TimeSlice.hpp  TimeSliceHeader.hpp  TimeSliceHeaderData.hpp  TriggerRecord.hpp  TriggerRecordHeader.hpp  TriggerRecordHeaderData.hpp  Types.hpp
include/daqdataformats/detail/: SourceID.hxx
include/dataformats/: ComponentRequest.hpp  Fragment.hpp  FragmentHeader.hpp  GeoID.hpp  TriggerRecord.hpp  TriggerRecordHeader.hpp  TriggerRecordHeaderData.hpp  Types.hpp
include/dataformats/daphne/: DAPHNEFrame.hpp
include/dataformats/pacman/: PACMANFrame.hpp
include/dataformats/pds/: PDSFrame.hpp
include/dataformats/wib/: WIBFrame.hpp
include/dataformats/wib2/: WIB2Frame.hpp  WIB2Unpack.hpp
pybindsrc/: component_request.cpp  fragment.cpp  geoid.cpp  module.cpp  sourceid.cpp  time_slice.cpp  trigger_record.cpp
python/daqdataformats/: __init__.py
schema/daqdataformats/: sourceid.jsonnet
src/: WIB2Unpack.cpp  WIBUnpack.cpp
test/apps/: fragment_serialization_speed.cxx
unittest/: ComponentRequest_test.cxx  FragmentHeader_test.cxx  Fragment_test.cxx  GeoID_test.cxx  SourceID_test.cxx  TimeSliceHeader_test.cxx  TimeSlice_test.cxx  TriggerRecordHeaderData_test.cxx  TriggerRecordHeader_test.cxx  TriggerRecord_test.cxx  WIB2Frame_test.cxx  WIBFrame_test.cxx
