cmake_minimum_required(VERSION 3.12)
project(daqdataformats VERSION 4.0.0)

find_package(daq-cmake REQUIRED)

daq_setup_environment()


##############################################################################
# Main library

daq_add_library(LINK_LIBRARIES )

##############################################################################
# Plugins

##############################################################################
# Integration tests

##############################################################################
# Unit Tests

##############################################################################

daq_install()
